<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="capestone">Capestone</string>
    <string name="go_ubiquitous">Go ubiquitous</string>
    <string name="make_your_app_material">Make your app material</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
</resources>
