<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:text="@string/stock_hawk"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="23dp"
        android:id="@+id/button2"
        android:background="#2E3D49"
        android:textColor="@android:color/background_light"
        android:onClick="sendMessage"/>

    <Button
        android:text="@string/build_it_bigger"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:background="#2E3D49"
        android:textColor="@android:color/background_light"
        android:onClick="sendMessage"/>

    <Button
        android:text="@string/make_your_app_material"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:background="#2E3D49"
        android:textColor="@android:color/background_light"
        android:onClick="sendMessage"/>

    <Button
        android:text="@string/go_ubiquitous"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_marginTop="23dp"
        android:id="@+id/button5"
        android:background="#2E3D49"
        android:textColor="@android:color/background_light"
        android:onClick="sendMessage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_nanodegree_apps"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#2E3D49" />

    <Button
        android:text="@string/popular_movies"
        android:layout_width="300dp"
        android:layout_marginTop="23dp"
        android:id="@+id/button"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:background="#2E3D49"
        android:textColor="@android:color/background_light"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:onClick="sendMessage"/>

    <Button
        android:text="@string/capestone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/button6"
        android:background="#2E3D49"
        android:textColor="@android:color/background_light"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:onClick="sendMessage"/>
</RelativeLayout>
